services/iam-service/overlays/production/patches/env-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-service
spec:
  template:
    spec:
      containers:
        - name: iam-service
